--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 tbibtools (VIM plugin) -- tbibtools -- bibtex related tools (sort, filter ...)
 
-Status:  Experimental
+Status:  Works for me (there may be some minor quirks)
 Dependencies:
   tlib :: http://github.com/tomtom/tlib_vim
       > git clone git://github.com/tomtom/tlib_vim.git
